# axum-auth

./: .env.example  Cargo.toml  README.md
migrations/: 20250908021116_users.up.sql
src/: config.rs  dtos.rs  error.rs  models.rs
